tests/phase3/switch_bad_default_dup.stderr
tests/phase3/switch_bad_default_dup.sl:82:83: error: unexpected token
