tests/phase3/switch_bad_default_dup.sl
fn f(x i32) i32 {
    switch x {
    default {
        return 0
    }
    default {
        return 1
    }
    }
}
